# toolcallingjourney

./: client.py  main.py  pyproject.toml  requirements.txt  weather.py
agenticAIArch/: client.py  hierarchical.py  mathserver.py  swarm.py  weather.py
self_healing/: healer.py  run_tests.sh
self_healing/tests/node/: index.js  package.json
self_healing/tests/python/: data_pipeline.py  users.json
