[project]
name = "toolcalling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.2",
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph>=1.2.2",
    "mcp>=1.27.2",
    "python-dotenv>=1.2.2",
]
